# azure-foundry-multi-agents-workflow

./: .env.example  .gitignore  README.md  main.py  main_parallel.py  pyproject.toml
.github/workflows/: ci-cd.yml
evaluation/: __init__.py  agent_eval_data.jsonl  evaluation_data.jsonl  evaluation_results.json  run_evaluation.py  tool_definitions.json
pipeline/: agents.py  parallel_agents.py  parallel_workflow.yaml  publish.py  publish_parallel.py  workflow.yaml
src/: config.py  parallel_workflow.py  workflow.py
src/agents/: __init__.py  github_agent.py  jira_agent.py  orchestrator.py  parallel_orchestrator.py  slack_agent.py
src/prompts/: __init__.py  github.py  jira.py  orchestrator.py  parallel_orchestrator.py  slack.py
src/tools/: raw_mcp_sse.py  raw_mcp_stdio.py
